[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/LevelNode.gd" type="Script" id=1]
[ext_resource path="res://Assets/Custom/medal2.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Fonts/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Custom/dialouge-box-7.png" type="Texture" id=4]
[ext_resource path="res://Assets/Items/locked.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 3 )

[node name="LevelNode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1030.0
margin_bottom = -420.0
rect_min_size = Vector2( 250, 300 )
script = ExtResource( 1 )

[node name="ColorRect" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 4 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 245.0
margin_bottom = 295.0
mouse_filter = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer"]
margin_top = 3.0
margin_right = 240.0
margin_bottom = 243.0
rect_min_size = Vector2( 240, 240 )
mouse_filter = 2
color = Color( 0.388235, 0.388235, 0.388235, 0.247059 )

[node name="LevelNum" type="Label" parent="MarginContainer/VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 240, 240 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="MedalContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 247.0
margin_right = 240.0
margin_bottom = 287.0
rect_min_size = Vector2( 240, 40 )
mouse_filter = 2
alignment = 1

[node name="Star1" type="TextureRect" parent="MarginContainer/VBoxContainer/MedalContainer"]
visible = false
margin_left = 56.0
margin_right = 96.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="Star2" type="TextureRect" parent="MarginContainer/VBoxContainer/MedalContainer"]
visible = false
margin_left = 78.0
margin_right = 118.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="Star3" type="TextureRect" parent="MarginContainer/VBoxContainer/MedalContainer"]
visible = false
margin_left = 100.0
margin_right = 140.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="Locked" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.54902 )

[node name="TextureRect" type="TextureRect" parent="Locked"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 5 )

[connection signal="pressed" from="ColorRect" to="." method="_on_ColorRect_pressed"]
